# LatticeBoltzmannCmaismais

./: CMakeLists.txt  automacao_darcy.py  automacao_laplace.py  main.cu  plot_phi_midline.py  valida_darcy.py  valida_darcy_pressao.py  valida_darcy_total.py  valida_laplace.py  valida_poiseuille.py
Magnetismo/: poisson.cu  poisson.cuh
boundaries/: open_boundaries.cu  open_boundaries.cuh
config/: config.cuh
initialization/: initialization.cu  initialization.cuh
lbm/: lbm.cu  lbm.cuh
multiphase/: allen_cahn.cu  allen_cahn.cuh  cahn_hilliard.cu  cahn_hilliard.cuh
post_process/: post_process.cu  post_process.cuh
